# world

./: .gitignore  CMakeLists.txt  ConwaysGoL.cc  Grid.cc  Grid.h  GridRenderer.cc  GridRenderer.h  README.md  TileType.h  main.cpp
src/: Colorizer.cc  Colorizer.h  ConwaysGoL.cc  ConwaysGoL.h  Entity.cc  Entity.h  Grid.cc  Grid.h  GridRandomizer.cc  GridRandomizer.h  GridRenderer.cc  GridRenderer.h  main.cpp
